# autogen

./: .env.example  .gitignore  .pre-commit-config.yaml  ADR-024-Memory-Optimization-Strategies.md  AUTOGEN_PROJECT_MASTER.md  AutogenSpecs_Expanded.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  MONDAY_CONTINUATION.md  MyComponent.vue  PYSIDE6_UI_IMPLEMENTATION.md  README.md  TESTING_GUIDE.md  VSCODE_EXTENSION_IMPLEMENTATION.md  VSCODE_INTEGRATION_PLAN.md  autogen-mcp.json  autogen.config.json  debug_embedding.py  debug_hybrid_search.py  debug_search_issue.py  debug_vector_step.py  demo_memory_analytics.py  docker-compose.yml  launch.py  phase3_results.json  pyproject.toml  quick_embedding_check.py  test_agent_memory_integration.py  test_artifact_memory.py  test_collection_fix.py  test_cross_project_learning.py  test_direct_retrieval.py  test_final_validation.py  test_fixed_memory.py  test_full_flow_fixed.py  test_knowledge_management.py  test_mcp.py  test_memory_async.py  test_memory_integration.py  test_memory_search.py  (+10 more)
.github/: pull_request_template.md
development/: MyComponent.vue  README.md  test_agent_persistence.py  test_search_debug.py  test_seeding_final.py  test_seeding_fix.py  test_step6_2_export_import.py
docs/: vscode_mcp_interface.md
examples/: README.md  demo_cross_project_learning.py  demo_frameworks.py  scrum_lit3_builder.py  vue_component_pattern.txt
scripts/: init_ui_services.py
test_memory_docs/: api_reference.md  project_overview.md  technical_docs.md  testing_scenarios.md  user_guide.md
tests/: test_big_autogen_system.py  test_cli.py  (+14 more)
(+158 files in other folders)
